--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "date-fns": "^3.6.0",
     "mapbox-gl": "^3.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wouter": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
