--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mapbox-gl": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-youtube": "^10.1.0",
     "wouter": "^3.3.0"
   },
   "devDependencies": {
